--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FREEAPPS 🚀 \ NEW APPS EVERY DAY</title>
+    <title>FREEAPPS</title>
     <link rel="stylesheet" href="styles.css">
-  
+
     <!-- Google AdSense Verification Code -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8560197732901122"
-     crossorigin="anonymous"></script>
-  
-  </head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8560197732091122"
+    crossorigin="anonymous"></script>
+
+</head>
+
 <body>
   <!-- Header -->
   <header>
