--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             <p>The Power of AI!</p>
             <a href="https://shrinkme.ink/3EY2" class="download-btn">Download Now</a>
           </div>
-          <div class="app-card" data-name="CHATBOX">
+          <div class="app-card" data-name="Spotify">
             <a href="https://shrinkme.ink/MdOp2qK" class="app-link">
               <img src="https://i.pinimg.com/736x/7e/8b/cf/7e8bcfca6278bc0e1c7494cfb5c6713f.jpg" alt="CHATBOX">
               <h4>SPOTIFY PREMIUM</h4>
@@ -274,7 +274,7 @@
             <p>Listen to music without ads and enjoy exclusive features.</p>
             <a href="https://shrinkme.ink/MdOp2qK" class="download-btn">Download Now</a>
           </div>
-          <div class="app-card" data-name="CHATBOX">
+          <div class="app-card" data-name="duolingo language premium">
             <a href="https://shrinkme.ink/zqoiJP3" class="app-link">
               <img src="https://cdn.jim-nielsen.com/ios/512/duolingo-language-lessons-2024-01-10.png?rf=1024" alt="CHATBOX">
               <h4>DUOLINGO PREMIUM</h4>
@@ -282,7 +282,7 @@
             <p>Learn every language with duolingo premium.</p>
             <a href="https://shrinkme.ink/zqoiJP3" class="download-btn">Download Now</a>
           </div>
-          <div class="app-card" data-name="CHATBOX">
+          <div class="app-card" data-name="voice changer with effects">
             <a href="https://shrinkme.ink/rupwgd" class="app-link">
               <img src="https://solutions-assets.sftcdn.net/uploads/00000032290.png" alt="CHATBOX">
               <h4>VOICE CHANGER WITH EFFECTS PREMIUM</h4>
@@ -290,7 +290,7 @@
             <p>Learn every language with duolingo premium.</p>
             <a href="https://shrinkme.ink/rupwgd" class="download-btn">Download Now</a>
           </div>
-          <div class="app-card" data-name="CHATBOX">
+          <div class="app-card" data-name="location changer premium">
             <a href="https://shrinkme.ink/1g50m2cQ" class="app-link">
               <img src="https://play-lh.googleusercontent.com/wPOSsJpugRFhQ-_p5BtfE9VkADcYYjgcyysFyqW3-HcegBjNj0kVIF21LN1qYgN7K6U" alt="CHATBOX">
               <h4>LOCATION CHANGER PREMIUM</h4>
@@ -298,7 +298,7 @@
             <p>Change your location to any of the world!</p>
             <a href="https://shrinkme.ink/1g50m2cQ" class="download-btn">Download Now</a>
           </div>
-          <div class="app-card" data-name="CHATBOX">
+          <div class="app-card" data-name="4k wallpapers">
             <a href="https://shrinkme.ink/4jqF5p" class="app-link">
               <img src="https://play-lh.googleusercontent.com/YZTFsrZW4qkE5G1gKYne5my3CKUvlmczWB1k7NRQ9eW9EuISlOcVrhiwVZJalLX_A3s-" alt="CHATBOX">
               <h4>4K Wallpapers PREMIUM</h4>
@@ -306,7 +306,7 @@
             <p>4K WALLPAPERS.</p>
             <a href="https://shrinkme.ink/4jqF5p" class="download-btn">Download Now</a>
           </div>
-          <div class="app-card" data-name="CHATBOX">
+          <div class="app-card" data-name="myfitnesspal premium fitness health wealth">
             <a href="https://shrinkme.ink/4jqF5p" class="app-link">
               <img src="https://scontent.fopo5-1.fna.fbcdn.net/v/t39.30808-6/352719295_182034834829839_7777299897996393619_n.png?_nc_cat=103&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=RtcOdtF49HQQ7kNvgENMau9&_nc_oc=AdjxVJ4J4icgOtLDFtaL-Pzk1x_hjwiXGyR_5SJyOI3a0MLmEAFB9O-bkfVPkhYu8wQ&_nc_zt=23&_nc_ht=scontent.fopo5-1.fna&_nc_gid=Asp_aZ7yDivBBhGo6fqoL7g&oh=00_AYCipYFu2gsgVpGEIj2enTkQfAtzDfOM7a1Uz2fk9j0lww&oe=67B82C0C" alt="CHATBOX">
               <h4>MyFitnessPal PREMIUM</h4>
@@ -314,7 +314,7 @@
             <p>MyFitnessPal PREMIUM for FREE!</p>
             <a href="https://shrinkme.ink/4jqF5p" class="download-btn">Download Now</a>
           </div>
-          <div class="app-card" data-name="CHATBOX">
+          <div class="app-card" data-name="shazam music premium song listen">
             <a href="https://shrinkme.ink/mt3a1OPT" class="app-link">
               <img src="https://cdn.jim-nielsen.com/watchos/512/shazam-2015-07-22.png?rf=1024" alt="CHATBOX">
               <h4>SHAZAM PREMIUM</h4>
