--- a/index.html
+++ b/index.html
@@ -167,11 +167,18 @@
   <main>
     <section id="hero">
       <div class="container">
-        <h2>Discover Premium Apps for Free!</h2>
-        <p>Download unlocked versions of your favorite apps without any hassle.</p>
+        <h2>Download any PREMIUM VERSION for FREE!</h2>
+        <p>Simple. Choose the app, click DOWNLOAD and be HAPPY!</p>
         <form id="search-form">
-          <input type="text" id="search-input" placeholder="Search for apps...">
-          <button id="search-button">Search</button>
+          <div class="search-container">
+            <input type="text" id="search-input" placeholder="Search for apps...">
+            <button id="search-button">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-search">
+                <circle cx="11" cy="11" r="8"></circle>
+                <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+              </svg>
+            </button>
+          </div>
         </form>
       </div>
     </section>
