--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>EnhancedMods - Download Premium Apps for Free</title>
   <!-- Standard favicon -->
   <link rel="icon" href="Novo_Projeto__4_-removebg-preview.png" type="image/x-icon">
   <!-- Alternative formats -->
