--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
   <!-- Google Site Verification -->
   <meta name="google-site-verification" content="obTbFwTNNBEzD_FOrDWX7uNwHO23ZU8opl2-frKmDKs">
-  <script async="async" data-cfasync="false" src="//pl25933843.effectiveratecpm.com/b2451197c714e52032826abea2ea800c/invoke.js"></script>
+  <script async data-cfasync="false" src="//pl25933843.effectiveratecpm.com/b2451197c714e52032826abea2ea800c/invoke.js"></script>
   <div id="container-b2451197c714e52032826abea2ea800c"></div>
-  <script async="async" data-cfasync="false" src="//pl25933843.effectiveratecpm.com/b2451197c714e52032826abea2ea800c/invoke.js"></script>
+  <script async data-cfasync="false" src="//pl25933843.effectiveratecpm.com/b2451197c714e52032826abea2ea800c/invoke.js"></script>
   <div id="container-b2451197c714e52032826abea2ea800c"></div>
   <!-- Meta Tags -->
   <meta charset="UTF-8">
@@ -153,14 +153,16 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <script async="async" data-cfasync="false" src="//pl25933843.effectiveratecpm.com/b2451197c714e52032826abea2ea800c/invoke.js"></script>
+  <script async data-cfasync="false" src="//pl25933843.effectiveratecpm.com/b2451197c714e52032826abea2ea800c/invoke.js"></script>
   <div id="container-b2451197c714e52032826abea2ea800c"></div>
-  <script async="async" data-cfasync="false" src="//pl25933843.effectiveratecpm.com/b2451197c714e52032826abea2ea800c/invoke.js"></script>
+  <script async data-cfasync="false" src="//pl25933843.effectiveratecpm.com/b2451197c714e52032826abea2ea800c/invoke.js"></script>
   <div id="container-b2451197c714e52032826abea2ea800c"></div>
   <header>
     <div class="container">
       <h1><a href="#">EnhancedMods</a></h1>
-      <nav>
+      <!-- Mobile Nav Toggle -->
+      <button id="nav-toggle" aria-label="Toggle navigation">☰</button>
+      <nav id="mobile-nav">
         <ul>
           <li><a href="#hero" class="active">Home</a></li>
           <li><a href="#apps">Apps</a></li>
