--- a/index.html
+++ b/index.html
@@ -13,18 +13,11 @@
   <meta name="google-site-verification" content="obTbFwTNNBEzD_FOrDWX7uNwHO23ZU8opl2-frKmDKs">
   <script async data-cfasync="false" src="//pl25933843.effectiveratecpm.com/b2451197c714e52032826abea2ea800c/invoke.js"></script>
   <div id="container-b2451197c714e52032826abea2ea800c"></div>
-  <script type="text/javascript">
-    atOptions = {
-      'key' : 'cb4e608df4c6bdf68513e6d904dce113',
-      'format' : 'iframe',
-      'height' : 50,
-      'width' : 320,
-      'params' : {}
-    };
   </script>
   <script type="text/javascript" src="//www.highperformanceformat.com/cb4e608df4c6bdf68513e6d904dce113/invoke.js"></script>
   <script async data-cfasync="false" src="//pl25933843.effectiveratecpm.com/b2451197c714e52032826abea2ea800c/invoke.js"></script>
   <div id="container-b2451197c714e52032826abea2ea800c"></div>
+  <script type='text/javascript' src='//luckilygelatine.com/70/aa/72/70aa721d0b902f77f8cd9ee90d58857b.js'></script>
   <!-- Meta Tags -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -167,16 +160,9 @@
   <div id="container-b2451197c714e52032826abea2ea800c"></div>
   <script async data-cfasync="false" src="//pl25933843.effectiveratecpm.com/b2451197c714e52032826abea2ea800c/invoke.js"></script>
   <div id="container-b2451197c714e52032826abea2ea800c"></div>
-  <script type="text/javascript">
-    atOptions = {
-      'key' : 'cb4e608df4c6bdf68513e6d904dce113',
-      'format' : 'iframe',
-      'height' : 50,
-      'width' : 320,
-      'params' : {}
-    };
   </script>
   <script type="text/javascript" src="//www.highperformanceformat.com/cb4e608df4c6bdf68513e6d904dce113/invoke.js"></script>
+  <script type='text/javascript' src='//luckilygelatine.com/70/aa/72/70aa721d0b902f77f8cd9ee90d58857b.js'></script>
   <header>
     <div class="container">
       <h1><a href="#">EnhancedMods</a></h1>
