--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>EnhancedMods - Download Premium Apps for Free</title>
+  <title>EnhancedMods: Safe & Fast Premium Apps Download</title>
   <!-- Standard favicon -->
   <link rel="icon" href="Novo_Projeto__4_-removebg-preview.png" type="image/x-icon">
   <!-- Alternative formats -->
@@ -21,7 +21,7 @@
   <!-- Meta Tags -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Discover and download premium versions of your favorite apps for free. Enjoy ad-free experiences, advanced editing tools, and more with EnhancedMods.">
+  <meta name="description" content="Download safe, ad-free premium apps. Get exclusive features, high-speed downloads, and trusted APKs at EnhancedMods.">
   <meta name="keywords" content="free premium apps, unlocked apps, alight motion pro, capcut pro, youtube premium, vpn free, fl studio mobile">
   <meta name="author" content="EnhancedMods">
   <link rel="canonical" href="https://enhancedmods.pages.dev/">
@@ -165,7 +165,7 @@
   <script type='text/javascript' src='//luckilygelatine.com/70/aa/72/70aa721d0b902f77f8cd9ee90d58857b.js'></script>
   <header>
     <div class="container">
-      <h1><a href="#">EnhancedMods</a></h1>
+      <h1>EnhancedMods: Download Premium Apps</h1>
       <!-- Mobile Nav Toggle -->
       <button id="nav-toggle" aria-label="Toggle navigation">☰</button>
       <nav id="mobile-nav">
@@ -183,7 +183,7 @@
   <main>
     <section id="hero">
       <div class="container">
-        <h2>Download any PREMIUM VERSION for FREE!</h2>
+        <h2>Popular APKs</h2>
         <p>Simple. Choose the app, click DOWNLOAD and be HAPPY!</p>
         <form id="search-form">
           <div class="search-container">
