--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
   <script type='text/javascript' src='//luckilygelatine.com/70/aa/72/70aa721d0b902f77f8cd9ee90d58857b.js'></script>
   <header>
     <div class="container">
-      <h1>EnhancedMods: Download Premium Apps</h1>
+      <h1>EnhancedMods</h1>
       <!-- Mobile Nav Toggle -->
       <button id="nav-toggle" aria-label="Toggle navigation">☰</button>
       <nav id="mobile-nav">
@@ -201,7 +201,7 @@
 
     <section id="apps">
       <div class="container">
-        <h3>.APK's To Download:</h3>
+        <h3>DOWNLOAD NOW!</h3>
         <div class="app-grid">
           <!-- App Cards -->
           <div class="app-card" data-name="alight motion pro">
