--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
           <li><a href="#hero" class="active">Home</a></li>
           <li><a href="#apps">Apps</a></li>
           <li><a href="#about">About Us</a></li>
+          <li><a href="#app">APP Android/Ios</a></li>
         </ul>
       </nav>
       <label class="theme-switch">
@@ -484,7 +485,7 @@
         </div>
       </div>
     </section>
-    <section id="download-apps">
+    <section id="app">
       <div class="container">
         <h3>Download Our Webview App</h3>
         <p>Experience premium features on the go. Download our webview app for Android and iOS below:</p>
